<resources>
    <string name="app_name">Dental Clinic Imperial</string>
    <string name="link_to_website">
        <a href="http://www.dentalimperial.com">
            www.dentalimperial.com
        </a>
    </string>
    <string name="link_to_google_maps">
        <a href="https://goo.gl/maps/pDDf7AAHCWk">
            18 Todor Dimov, Str. Varna, Bulgaria
         </a>
    </string>
    <string name="schedule">Monday to Friday</string>
    <string name="work_time">9am - 7pm</string>
    <string name="contact_us">
         <a href="http://www.dentalimperial.com/contacts">
            Get in touch with us!
        </a>
    </string>
    <string name="tel_359_52_600_955">
        <a href="tel: 359 52 600 955">
            tel:   +359 52 600 955
        </a>
    </string>
    <string name="mob_359_893_600_955">

        <a href="tel: 359 893 600 955">
            mob: +359 893 600 955
        </a>
    </string>
    <string name="phone_icon">phone_icon</string>
    <string name="clock_icon">clock_icon</string>
    <string name="fb_logo">fb-logo</string>
    <string name="designer_logo">designer_logo</string>
    <string name="creative_studio">Creative Studio:</string>
    <string name="slider">slider</string>
</resources>
