<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDivider"
        android:layout_marginLeft="@dimen/icon_padding"
        android:layout_marginRight="@dimen/icon_padding"
        android:layout_marginTop="@dimen/slider_margin"
        android:layout_marginBottom="@dimen/slider_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/icon_padding"
        android:layout_marginRight="@dimen/icon_padding">

        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/fb_icon"
            android:contentDescription="@string/fb_logo"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@id/footer_text"
            />

        <TextView
            android:id="@+id/footer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/designer_logo"
            android:text="@string/creative_studio"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:contentDescription="@string/designer_logo"
            android:src="@drawable/agro_vision"
            android:layout_alignParentEnd="true"
            android:id="@+id/designer_logo" />

    </RelativeLayout>

</LinearLayout>